Explicitly link with libpthread

--- a/scotch-Makefile.inc.in
+++ b/scotch-Makefile.inc.in
@@ -10,7 +10,7 @@ CCS	= gcc
 CCP     = mpicc
 CCD	= mpicc
 CFLAGS	= @RPMFLAGS@ -O3 -Drestrict=__restrict -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_PTHREAD -DSCOTCH_RENAME
-LDFLAGS	= -lz -lm -lrt
+LDFLAGS	= -lpthread -lz -lm -lrt
 CP	= cp -a
 LEX	= flex
 LN	= ln
