--- a/scotch-Makefile.inc.in
+++ b/scotch-Makefile.inc.in
@@ -9,8 +9,8 @@ CAT	= cat
 CCS	= gcc
 CCP     = mpicc
 CCD	= mpicc
-CFLAGS	= @RPMFLAGS@ -O3 -Drestrict=__restrict -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_PTHREAD -DSCOTCH_RENAME
-LDFLAGS	= -lpthread -lz -lm -lrt
+CFLAGS	= @RPMFLAGS@ -O3 -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_FILE_COMPRESS_BZ2 -DCOMMON_FILE_COMPRESS_LZMA -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_RENAME -DSCOTCH_PTHREAD -Drestrict=__restrict -DIDXSIZE64
+LDFLAGS	= -lpthread -lz -lbz2 -llzmadec -lm -lrt
 CP	= cp -a
 LEX	= flex
 LN	= ln
