--- a/scotch-Makefile.inc.in
+++ b/scotch-Makefile.inc.in
@@ -9,7 +9,7 @@ CAT	= cat
 CCS	= gcc
 CCP     = mpicc
 CCD	= mpicc
-CFLAGS	= @RPMFLAGS@ -O3 -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_FILE_COMPRESS_BZ2 -DCOMMON_FILE_COMPRESS_LZMA -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_RENAME -DSCOTCH_PTHREAD -Drestrict=__restrict -DIDXSIZE64
+CFLAGS	= @RPMFLAGS@ -O3 -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_FILE_COMPRESS_BZ2 -DCOMMON_FILE_COMPRESS_LZMA -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_RENAME -DSCOTCH_PTHREAD -DSCOTCH_PTHREAD_NUMBER=2 -DSCOTCH_PTHREAD_AFFINITY_LINUX -Drestrict=__restrict
 LDFLAGS	= -lpthread -lz -lbz2 -llzmadec -lm -lrt
 CP	= cp -a
 LEX	= flex -Pscotchyy -olex.yy.c
